--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,3 +42,13 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+section#
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    left: 22px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px black;
+}
