--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,19 +36,25 @@ section#telefone {
 }
 
 iframe#tela {
-    position: relative;
+    position: relative; 
     top: 80px;
     left: 22px;
     width: 269px;
     height: 471px;
 }
 
-section#
-
 section#redes-sociais img {
     width: 50px;
     margin: 10px;
     left: 22px;
     border-radius: 50%;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.685);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .3s, border 1s;
 }
